# sequencing-tools

./: README.md  example1.py  example2.py  example3.py  example4.rst  example5.rst  pyproject.toml
docs/demos/: homer_seq.html  homer_seq.txt  homer_style.css
gnt_data/: __init__.py  main.py
read_john/: constructions.yaml
sequencing_tools/: calc.py  model.py  ordering.py
