[tool.poetry]
name = "sequencing-tools"
version = "0.1.0"
description = "consolidating various tools for language sequencing"
authors = ["James Tauber <jtauber@jtauber.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
isort = "^4.3.21"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
